<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alarm Clock</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_add_alarm">Add Alarm</string>
    <string name="title_activity_add_new_alarm">Add New Alarm</string>
    <string name="title_activity_alarm_triggered">Alarm</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_alarm_settings">Settings</string>
    <string name="_time">Time</string>
    <string name="_repeat">Repeat</string>
    <string name="_add">Add</string>
    <string name="_cancel">Cancel</string>
    <string name="_sun">Sun</string>
    <string name="_mon">Mon</string>
    <string name="_tue">Tue</string>
    <string name="_wed">Wed</string>
    <string name="_thu">Thu</string>
    <string name="_fri">Fri</string>
    <string name="_sat">Sat</string>
    <string name="undo">Undo</string>
    <string name="undo_delete_alarm">Undo delete alarm</string>

</resources>