<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewAlarm" >

    <TextView
        android:id="@+id/add_alarm_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10sp"
        android:gravity="center_horizontal"
        android:text="@string/create_alarm"
        android:textIsSelectable="false"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/time_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/timePicker"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/add_alarm_lbl"
        android:layout_marginTop="5sp"
        android:text="@string/_time" />

    <TimePicker
        android:id="@id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add_alarm_lbl"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:id="@+id/repeat_chk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/timePicker"
        android:text="@string/_repeat" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/repeat_chk"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingTop="5.0dip"
        android:weightSum="7" >

        <ToggleButton
            android:id="@+id/sun_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:enabled="false"
            android:minWidth="40dp"
            android:textOff="@string/_sun"
            android:textOn="@string/_sun"
            android:textSize="10sp" />

        <ToggleButton
            android:id="@+id/mon_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:minWidth="40dp"
            android:textOff="@string/_mon"
            android:textOn="@string/_mon"
            android:textSize="10sp" />

        <ToggleButton
            android:id="@+id/tue_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:minWidth="40dp"
            android:textOff="@string/_tue"
            android:textOn="@string/_tue"
            android:textSize="10sp" />

        <ToggleButton
            android:id="@+id/wed_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:minWidth="40dp"
            android:textOff="@string/_wed"
            android:textOn="@string/_wed"
            android:textSize="10sp" />

        <ToggleButton
            android:id="@+id/thu_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:minWidth="40dp"
            android:textOff="@string/_thu"
            android:textOn="@string/_thu"
            android:textSize="10sp" />

        <ToggleButton
            android:id="@+id/fri_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:enabled="false"
            android:minWidth="40dp"
            android:textOff="@string/_fri"
            android:textOn="@string/_fri"
            android:textSize="10sp" />

        <ToggleButton
            android:id="@+id/sat_tgl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:enabled="false"
            android:minWidth="40dp"
            android:textOff="@string/_sat"
            android:textOn="@string/_sat"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:drawable/bottom_bar"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingLeft="4.0dip"
        android:paddingRight="4.0dip"
        android:paddingTop="5.0dip" >

        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_cancel" />

        <Button
            android:id="@+id/add_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_add" />
    </LinearLayout>

</RelativeLayout>